<resources>
    <string name="app_name">PatientManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_details">Patient Details</string>
    <string name="title_activity_patient_details_edit">Patient Edit</string>
    <string name="action_edit">Edit</string>
    <string name="patient_age">Patient Age : </string>
    <string name="gender">Gender : </string>
    <string name="drugs">Drugs</string>
    <string name="migrains">Migrains</string>
    <string name="genderCom">Gender * :</string>
    <string name="patientAge">Patient Age * :</string>
    <string name="age">Age</string>
    <string name="patient_name">Patient Name*</string>
    <string name="name">NAME</string>
    <string name="probTrans">probabilityTransition</string>
    <string name="profilePic">profilePic</string>
    <string name="error">Error:</string>
    <string name="ok">ok</string>
    <string name="servererror">Unable to reach our servers.</string>
    <string name="networkUnavailable">Check your internet connection</string>
</resources>
