<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="thontepu.naveen.patientmanager.Activities.PatientDetailsEdit"
    tools:showIn="@layout/activity_patient_details_edit">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#e5e9ee"
                android:padding="10dp"
                android:transitionName="@string/profilePic"
                android:src="@drawable/nouserlogo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/patientNameTil"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:hint="@string/patient_name">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:transitionName="@string/name"
                        android:id="@+id/patientNameEt"/>
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patientAge"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                    <AutoCompleteTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/age"
                        android:transitionName="@string/age"
                        android:inputType="numberDecimal"
                        android:id="@+id/patientAgeEt"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:transitionName="@string/gender">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genderCom"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginBottom="4dp"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="20dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        android:id="@+id/genderRadioGroup"
                        android:layout_marginBottom="@dimen/small_margin">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Male"
                            android:checked="true"
                            android:id="@+id/maleRadioButton"
                            android:textSize="20sp"
                            android:layout_weight="1"/>
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:id="@+id/femaleRadioButton"
                            android:text="Female"/>
                    </RadioGroup>
                </LinearLayout>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/migrains"
                    android:id="@+id/migrainCheckBox"
                    android:textSize="20sp"
                    android:layoutDirection="rtl"
                    android:gravity="left"
                    android:layout_marginBottom="@dimen/small_margin"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drugs"
                    android:id="@+id/drugsCheckBox"
                    android:textSize="20sp"
                    android:layoutDirection="rtl"
                    android:gravity="left"
                    android:layout_marginBottom="@dimen/small_margin"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
